2005-07-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-network-dialog.c (network_game_dialog_show): Change the
	initial status message to be a little less clunky.

2005-07-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* libgnomegames.schemas.in: players -> player's. Spotted by Clytie
	Siddall.

2005-07-16  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (EXTRA_DIST): Insert the correct file list for the
	schemas. Add schema_DATA to DISTCLEANFILES. This should fix a
	"make distcheck" problem.

2005-07-08  Richard Hoelscher  <rah@rahga.com>

	* games-preimage.[c|h]: Fix for warnings related to buffer signedness.

2005-07-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am
	* games-scores.c:
	* games-scores.h:
	* games-score.c:
	* games-score.h:
	* games-scores-backend.c:
	* games-scores-backend.h:
	* games-scores.gob: Ditch gob for games-scores*, create pure C
	versions of everything. It even compiles now. Nothing useful
	happens though.

2005-07-07  Richard Hoelscher  <rah@rahga.com>

	* games-scores.[c|h]:
	* games-scores-private.h: Add to CVS. These are from a prior
	games-scores.gob
	* Makefile.am: Try to skip doing anything the the games-scores.gob
	temporarily.

2005-06-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-scores.gob: I'm stuck in Changi Airport and I can only
	find the brain-power to clean up warnings.

	* Makefile.am (GOB_FILES): Rearrange the names so the dependencies
	work out right.

2005-06-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-scores.gob: The first games-scores code. It doesn't work
	yet, but it does compile. DO NOT USE, it was just simpler to fix
	an accident by uploading it.

	* games-network.c (games_host_lan_game): Patch from Sven Herzberg
	to replace snprintf with g_strdup_printf.

2005-06-17  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-scores-dialog.gob: Added the GPL at the top of the file.

2005-06-23  Richard Hoelscher  <rah@rahga.com>
