@@ -1,3 +1,8 @@
+2005-07-23  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* games-server.py: Make it become a proper Unix daemon. This
+	should fix bug #172171.
+
 2005-07-21  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* games-network-dialog.c (network_game_dialog_show): Change the
